# Sprint-Scheduler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  credentials.json  log.txt  push-event.py  save.json
.github/workflows/: main.yml
header/: .event.hpp.swp  base.hpp  client.hpp  event.hpp  menu.hpp  sortdate.hpp  sortpriority.hpp  sortstrategy.hpp  task.hpp  tasklist.hpp
src/: .event.cpp.swp  client.cpp  event.cpp  main.cpp  sortdate.cpp  sortpriority.cpp  task.cpp  tasklist.cpp
tests/: create_tests.cpp  delete_tests.cpp  event_test.cpp  save_load_tests.cpp  sortdate_test.cpp  sortpriority_test.cpp  task_test.cpp  tasklist_test.cpp  test.cpp
